--- a/html/home.html
+++ b/html/home.html
@@ -21,7 +21,7 @@
     </head>
 
     <body>
-            <style>@media(max-width:999px){html{background-image:url(/img/bg_small.jpg)!important}#page{width:auto !important;margin:10px 0 !important;padding:15px 0 !important;min-height:300px}#header img{width:95%;max-width:500px}#main_search_box{width:95% !important;margin-bottom:5px}}@media(min-width:1000px){html{background-image:url(bg.jpg)!important}}html{background:#0C0C0C no-repeat 0 0 fixed;background-size:100% 100%;height:100%;width:100%}body{font-family:Arial, Sans-serif, Serif;font-size:12pt}a, a:visited{color:#000}h1{font-size:12pt;margin:0}#page{background-color:#fff;margin:100px auto 0 auto;width:800px;border:1px solid #aaa;border-radius:10px;padding:50px 15px}#header{text-align:center}#content{margin:20px 0 20px 0;text-align:center;font-size:10pt}#footer{font-size:10px;text-align:center;margin-top:5px;color:#333}#footer a, #footer a:visited{color:#333}#main_search_box{font-size:20pt;width:520px;/*padding:.5rem .75rem;line-height:1.25;color:#495057;background-color:#fff;background-image:none;background-clip:padding-box;border:1px solid rgba(0,0,0,.15);border-radius:.25rem;transition:border-color ease-in-out .15s,box-shadow ease-in-out .15s;box-sizing:border-box;*/}#main_search_button{font-size:20pt;/*padding:.5rem .75rem;*/}p{margin:0}#content div{margin-bottom:10px}#content strong{font-size:8pt}.clear{clear:both}.sponsor_message{margin-top:20px}button{border-color:#1a7ab9 #1a7ab9 #16689e;background:repeat-x #1d89cf;background-image:-webkit-linear-gradient(top,#1e8cd3 0,#1a7ab9 100%);background-image:linear-gradient(to bottom,#1e8cd3 0,#1a7ab9 100%);color:#fff;-webkit-box-shadow:none;box-shadow:none;text-shadow:none;font-weight:400;outline:none !important;border-radius:6px;display:inline-block;margin-bottom:0;text-align:center;white-space:nowrap;-ms-touch-action:manipulation;touch-action:manipulation;cursor:pointer;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;border:1px solid transparent;font-family:Helvetica, Sans-serif}button:hover{color:#fff;border-color:#1871ab #1871ab #12547e;background:repeat-x #1a7ab9 !important;background-image:-webkit-linear-gradient(top,#1c83c6 0,#1871ab 100%)!important;background-image:linear-gradient(to bottom,#1c83c6 0,#1871ab 100%)!important}button:active{background:#1a7dbd !important;border-color:#146090;border-bottom-color:#146090 !important;color:#fff;-webkit-box-shadow:0 0 12px rgba(0,0,0,.1)inset;box-shadow:0 0 12px rgba(0,0,0,.1)inset}</style>
+            <style>@media(max-width:999px){html{background-image:url(/img/bg_small.jpg)!important}#page{width:auto !important;margin:10px 0 !important;padding:15px 0 !important;min-height:300px}#header img{width:95%;max-width:500px}#main_search_box{width:95% !important;margin-bottom:5px}}@media(min-width:1000px){html{background-image:url(bg.jpg)!important}}html{background:#0C0C0C no-repeat 0 0 fixed;background-size:100% 100%;height:100%;width:100%}body{font-family:Arial, Sans-serif, Serif;font-size:12pt}a, a:visited{color:#000}h1{font-size:12pt;margin:0}#page{background-color:#fff;margin:100px auto 0 auto;width:800px;border:1px solid #aaa;border-radius:10px;padding:50px 15px}#header{text-align:center}#content{margin:20px 0 20px 0;text-align:center;font-size:10pt}#footer{font-size:10px;text-align:center;margin-top:5px;color:#333}#footer a, #footer a:visited{color:#333}#main_search_box{font-size:20pt;width:520px;/*padding:.5rem .75rem;line-height:1.25;color:#495057;background-color:#fff;background-image:none;background-clip:padding-box;border:1px solid rgba(0,0,0,.15);border-radius:.25rem;transition:border-color ease-in-out .15s,box-shadow ease-in-out .15s;box-sizing:border-box;*/}#main_search_button{font-size:20pt;/*padding:.5rem .75rem;*/}p{margin:0}#content div{margin-bottom:10px}#content strong{font-size:8pt}.clear{clear:both}.sponsor_message{margin-top:20px}button{border-color:#1a7ab9 #1a7ab9 #16689e;background:repeat-x #1d89cf;background-image:-webkit-linear-gradient(top,#1e8cd3 0,#1a7ab9 100%);background-image:linear-gradient(to bottom,#1e8cd3 0,#1a7ab9 100%);color:#fff;-webkit-box-shadow:none;box-shadow:none;text-shadow:none;font-weight:400;outline:none !important;border-radius:6px;display:inline-block;margin-bottom:0;text-align:center;white-space:nowrap;-ms-touch-action:manipulation;touch-action:manipulation;cursor:pointer;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;border:1px solid transparent;font-family:Helvetica, Sans-serif}button:hover{color:#fff;border-color:#1871ab #1871ab #12547e;background:repeat-x #1a7ab9 !important;background-image:-webkit-linear-gradient(top,#1c83c6 0,#1871ab 100%)!important;background-image:linear-gradient(to bottom,#1c83c6 0,#1871ab 100%)!important}button:active{background:#1a7dbd !important;border-color:#146090;border-bottom-color:#146090 !important;color:#fff;-webkit-box-shadow:0 0 12px rgba(0,0,0,.1)inset;box-shadow:0 0 12px rgba(0,0,0,.1)inset} body {padding: 20px;} input {margin-bottom: 5px; padding: 2px 3px; width: 209px;}td {padding: 4px; border: 1px #CCC solid; width: 100px;}</style>
 
     <div id="page">
         <div id="header">
@@ -51,16 +51,42 @@
                 </script>
             </div>
 
-            <form action="/search">
-                <div>
-                    <input type="search" name="q" id="main_search_box" autofocus="autofocus" />
-                    <button type="submit" id="main_search_button">Search</button>
-                </div>
-            </form>
-
+            <input type="text" id="search" placeholder="Type to search">
             <p>
                 <strong>Ievadiet izpildītāju, dziesmas nosaukumu vai fragmentu no dziesmas vārdiem.</strong>
             </p>
+
+            <!-- Izveidot ciklu kurš ģenerē tabulu no DB -->
+            <script>
+            $.getJSON(url,
+            function (data) {
+                var tr;
+                for (var i = 0; i < data.length; i++) {
+                    tr = $('<tr/>');
+                    tr.append("<td>" + data[i].User_Name + "</td>");
+                    tr.append("<td>" + data[i].score + "</td>");
+                    tr.append("<td>" + data[i].team + "</td>");
+                    $('table').append(tr);
+                }
+            });
+            </script>
+
+            <table id="table" align="center">
+               <tr>
+                  <td>Apple</td>
+                  <td>Green</td>
+               </tr>
+               <tr>
+                  <td>Grapes</td>
+                  <td>Green</td>
+               </tr>
+               <tr>
+                  <td>Orange</td>
+                  <td>Orange</td>
+               </tr>
+            </table>
+
+
 
             <p class="sponsor_message">
                 Brīva vieta jūsu reklāmai..
