--- a/nodejs/html/home.html
+++ b/nodejs/html/home.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<script src="C:\Users\Lietotajs\Desktop\WEB_PROG\musicKursaDarbs\noderigi\fuzzyjs\lib"></script>
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -9,15 +10,6 @@
 
                     <link rel="canonical" href="https://findmusicbylyrics.com/" />
 
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-            ga('create', 'UA-760211-32', 'auto');
-            ga('send', 'pageview');
-        </script>
     </head>
 
     <body>
@@ -28,30 +20,6 @@
             <img src="logo.png" alt="Atrodiet dziesmu pēc vārdiem" />
             <h1>Atrodiet dziesmu pēc vārdiem</h1>
         </div>
-
-        <div id="content">
-            <div style="text-align: center;">
-                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                <ins id="homepage_ad" class="adsbygoogle"
-                     style="display:inline-block;width:728px;height:90px"
-                     data-ad-client="ca-pub-1936238606905173"
-                     data-ad-slot="8848388943"></ins>
-                <script>
-                var ad = document.getElementById("homepage_ad");
-                if (innerWidth < 500) {
-                    ad.style.width = "200px";
-                    ad.style.height = "90px";
-                    ad.setAttribute("data-ad-slot", "6765356946");
-                } else if (innerWidth < 750) {
-                    ad.style.width = "468px";
-                    ad.style.height = "15px";
-                    ad.setAttribute("data-ad-slot", "2616698364");
-                }
-                (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
-            </div>
-
-            
             <p>
                 <strong>Ievadiet izpildītāju, dziesmas nosaukumu vai fragmentu no dziesmas vārdiem.</strong>
             </p>
