--- a/nodejs/html/home.html
+++ b/nodejs/html/home.html
@@ -23,12 +23,13 @@
             <p>
                 <strong>Ievadiet izpildītāju, dziesmas nosaukumu vai fragmentu no dziesmas vārdiem.</strong>
             </p>
+            <!--
 			<form action = "http://127.0.0.1:8081/process_get" method = "GET">
 				<input type = "text" name = "song_name">  <br>
 				<input type = "submit" value = "Submit">
 			</form>
-
-            <!-- Izveidot ciklu kurš ģenerē tabulu no DB -->
+      -->
+            <!-- Izveidot ciklu kurš ģenerē tabulu no DB
             <script>
             $.getJSON(url,
             function (data) {
@@ -57,7 +58,7 @@
                   <td>Orange</td>
                </tr>
             </table>
-
+            -->
 
 
             <p class="sponsor_message">
